# LostCrop

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  todo.txt
lostcrop/: __init__.py  __main__.py  main.py  pyproject.toml  requirements.txt
lostcrop/command/res/: commands.json
lostcrop/commands/: __init__.py  manager.py
lostcrop/commands/res/: commands_es.json
